Fri Sep  1 00:44:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* k5-int.h: Added clockskew, kdc_req_sumtype, and
		kdc_default_options to the krb5_context structure.

	* krb5.hin: Added expected nonce and request_time fields to the
	        krb5_response structure.  The fields are used to pass
		information from krb5_send_tgs() to
		krb5_get_cred_via_tkt() so that it can do sanity checking.

	* k5-int.h: Add time offset field to the os_context structure.
		This offset is added to the system clock time to produce
		the "true" time.  

		Added prototypes for the functions which manipulate the
		time offset structures: krb5_set_real_time(),
		krb5_set_debugging_time(), krb5_use_natural_time(),
		krb5_get_time_offsets(), and krb5_set_time_offsets().

Tue Aug 29 13:26:22 EDT 1995	Paul Park	(pjpark@mit.edu)
	* k5-int.h - Add ser_ctx[_count] to krb5_context.  This keeps track
		of registered serializers.  Add serializer definitions and
		prototypes.
	* krb5.hin - Add priv_size to krb5_encrypt_block.  This indicates the
		size of the private data.  Add pointer to keytab ops for
		serializer handle.

Mon Aug 28 15:58:14 1995    <tytso@rsts-11.mit.edu>

	* k5-int.h: Added two new data structures: krb5_alt_method and
	        krb5_etype_info (and krb5_etype_info_entry).  

Fri Aug 25 17:12:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* k5-int.h: Added prototypes for encode_krb5_padata_sequence and
	        decode_krb5_padata_sequence.

	* krb5.hin: Removed unused (and misleading) macros
		KEYTYPE_IS_LOCAL, ETYPE_IS_LOCAL, CKSUMTYPE_IS_LOCAL

Thu Aug 24 19:23:10 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Wed Aug 16 02:45:19 1995  Chris Provenzano <proven@mit.edu>

	*  k5-int.h (krb5_lock_file(), krb5_unlock_file()):
		Use fds instead of FILE *s and don't pass the filename.

Fri Aug  4 23:04:06 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* k5-int.h: Add prototypes for krb5_crypto_os_localaddr and
		krb5_crypto_us_timeofday
