@@ -1,3 +1,9 @@
+
+Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)
+
+        * k5-int.h, krb5.hin : Remove krb5_enctype references, and replace with
+                krb5_keytype where appropriate.
+
 Fri Sep  1 00:44:59 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* k5-int.h: Added clockskew, kdc_req_sumtype, and
